# tetrominos

./: Cargo.toml
.github/workflows/: bevy.yml
assets/source/: grass.aseprite  line_clear.aseprite  outline.aseprite  tile.aseprite
assets/tiles/source/: make_outline.py  tile_green.aseprite  tile_orange.aseprite  tile_pink.aseprite  tile_purple.aseprite  tile_red.aseprite  tile_yellow.aseprite
src/: board.rs  input.rs  main.rs  rng.rs  tetromino.rs  tile.rs  warnings.rs
src/board/: board_config.rs  ghost_tile.rs  hold_display.rs  line_clear.rs  outline.rs  placed_tile.rs  queue_display.rs  tetromino_data.rs  tetromino_tile.rs  tile_assets.rs
src/game_board/: board.rs  mod.rs  tetromino.rs
src/tetromino/: mod.rs  tetromino.rs  tetromino_data.rs  tetromino_shape.rs
src/tetrominoes/: tetromino.rs  tetromino_data.rs
src/tiles/: mod.rs  tile.rs  tilemap.rs
